# CppProtobuf

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  add_person.cpp  addressbook.proto  list_people.cpp
cmake/: mainSetup.cmake  printSummary.cmake
